v.2.1.0~alpha6
- fix for AS reporting a directory doesn't exist when it does

v.2.1.0~alpha5
- another damn UTF8 problem. I hate UTF8.

v.2.1.0~alpha4
- fix for mishandled UTF8 characters in artist name during playback

v.2.1.0~alpha3
- fix for mishandled UTF8 characters in artist name during upgrade migration

v.2.1.0~alpha2
- archive any directory that can't be renamed
- added XML parsing of lastfm info to find artist name

v.2.1.0~alpha1
- Fuzzy artist search is now required and cannot be disabled
- created upgrade routine to rename hashed artist and image names
- included new option to ONLY use local artist path for storage
- updated AS to save and use unhashed artist and image names
- cleaned up folder path creation routines
- removed old download exclusion logic in favor of new _imgdb.nfo history

v.2.0.8
- fix for crash if Kodi plugin tries to load bio with oddly encoded characters
- fix for crash if a services cache file contains a string that doesn't evaluate to int

v.2.0.7
- added last.fm bio file as option for finding Musicbrainz ID
- moved all Musicbrainz ID functions into plugins
- fix so featured artist parsing from song name is case insensitive
- strip errant linefeed from readfile on musicbrainz.nfo (where manually created)

v.2.0.6
- removed some logging causing a unicode problem
- fix for crash when no valid JSON returned from theaudiodb.com

v.2.0.5
- reverted to old logic for checking for start of new artist (more reliable)
- fix for creation of empty artist folders when using fanart.jpg option

v.2.0.4
- added option to use local fanart and folder image outside extrafanart folder
- added MusicBrainz ID extraction from theaudiodb.com information
- added ArtistSlideshow.SimilarCount and ArtistSlideshow.AlbumCount to skin properties
- fix for theaudiodb lookup when artists have ampersands in their name
- fix for artist name separation leaving extra spaces

v.2.0.3
- removed support for htbackdrops.org (API access no longer available)